# courier_backend

./: .dockerignore  .env.example  .gitignore  README.md  babel-mapping.ini  backend.dockerfile  celery.flower.dockerfile  celery.worker.dockerfile  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 10cac43cb440_2_user.py  26c8f9bcd160_1_location.py  3b83acdcc82e_3_user_address.py  3d0bf138b5df_6_order.py  40055ce5110a_4_message.py  4181410cc861_3_file.py  424df58948dc_7_user_session_extra_fields.py  514372b0c547_2_config.py  a0aa6e7d6021_8_policy.py  b91096c2229f_5_user.py  cc62af102737_9_slider.py
app/: celeryworker_pre_start.py  gunicorn_conf.py  initial_data.py  main.py
app/conf/: __init__.py  config.py
app/contrib/account/: __init__.py  api.py  models.py  repository.py  (+3 more)
app/core/: app.py  celery_app.py  enums.py  exceptions.py  handlers.py  schema.py
app/db/: alembic.py  init_db.py  models.py  repository.py  session.py
app/locale/: base.pot
app/routers/: api.py  dependency.py  urls.py
app/utils/: __init__.py  emails.py  encoding.py  file.py  functional.py  import_utils.py  regex_helper.py  safestring.py  sanitizer.py  security.py  templating.py
scripts/: backend.example.service  format-imports.sh  format.sh  lint.sh  prestart.sh  start-reload.sh  start.sh  test-cov-html.sh  test.sh  tests-start.sh  worker-flower-start.sh  worker-start.sh
tests/: conftest.py
tests/api/: test_account.py
tests/jose/: test_asn1.py  test_backends.py  test_firebase.py  test_jwe.py  test_jwk.py  test_jws.py  test_jwt.py  test_utils.py
tests/utils/: test_sanitizer.py
(+113 files in other folders)
