[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bcrypt = "4.0.1"
cryptography = "^42.0.8"
alembic = "^1.14.0"
asgi-lifespan = "^2.1.0"
asgiref = "^3.8.1"
asyncpg = "^0.30.0"
babel = "^2.16.0"
ecdsa = "^0.19.0"
email-validator = "^2.2.0"
emails = "^0.6"
fastapi = "^0.115.4"
gunicorn = "^23.0.0"
httpx = "^0.27.2"
loguru = "^0.7.2"
orjson = "^3.10.11"
psycopg2-binary = "^2.9.10"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
lxml = {extras = ["html-clean"], version = "^5.2.2"}
rsa = "^4.9"
sqlalchemy = "^2.0.36"
sqlalchemy-utils = "^0.41.2"
tenacity = "^9.0.0"
uvicorn = "^0.32.0"
passlib = "^1.7.4"
python-multipart = "^0.0.17"
redis = "^5.2.0"
pillow = "^11.0.0"

python-magic = { version = "^0.4.27", markers = "sys_platform == 'linux'" }
python-magic-bin = { version = "*", markers = "sys_platform == 'win32'" }

celery = "^5.4.0"
flower = "^2.0.1"
fastapi-sso = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
windows = ["python-magic-bin"]

[tool.poetry.group.dev.dependencies]
faker = "^25.2.0"
isort = "^5.13.2"
mjml = "^0.11.0"
mypy = "^1.10.0"
toml-sort = "^0.23.1"
pytest-asyncio = "^0.24.0"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"


[tool.tomlsort]
all = true
ignore_case = true
in_place = true
no_header = true
